--- a/source/_posts/ASD_Res/强制性专注训练.md
+++ b/source/_posts/ASD_Res/强制性专注训练.md
@@ -9,6 +9,7 @@ tags:
 categories: 自闭症资源
 copyright_author: Demon 
 copyright_info: 请勿转载
+cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/LaoZhan-Cover.png
 ---
 
 ## **==老詹（崔建平）==** 是阿斯伯格，三个孩子都是ASD，目前三个孩子都已经上学，他提出了强制性专注训练的方法，个人认为是有很多可取之处的。
