--- a/source/_posts/ASD_Res/自理能力清单.md
+++ b/source/_posts/ASD_Res/自理能力清单.md
@@ -9,6 +9,7 @@ tags:
 categories: 自闭症资源
 copyright_author: Demon 
 copyright_info: 请勿转载
+cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/SelfCare-Cover.jpg
 ---
 
 VB-MAPP自理能力检查清单
