--- a/source/_posts/ASD_Res/自理能力清单.md
+++ b/source/_posts/ASD_Res/自理能力清单.md
@@ -8,7 +8,7 @@ tags:
     - 孤独症
 categories: 自闭症资源
 copyright_author: Demon 
-copyright_info: 请勿转载
+copyright_info: 未经允许，请勿转载
 cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/SelfCare-Cover.jpg
 ---
 
