--- a/source/_posts/ASD_Res/强制性专注训练.md
+++ b/source/_posts/ASD_Res/强制性专注训练.md
@@ -1,18 +1,17 @@
 ---
 title: 强制性专注训练
 date: 2024/7/13 02:46:25
-comments: true
 tags:
     - ASD
     - 自闭症
     - 孤独症
 categories: 自闭症资源
 copyright_author: Demon 
-copyright_info: 请勿转载
+copyright_info: 未经允许，请勿转载
 cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/LaoZhan-Cover.png
 ---
 
-## **==老詹（崔建平）==** 是阿斯伯格，三个孩子都是ASD，目前三个孩子都已经上学，他提出了强制性专注训练的方法，个人认为是有很多可取之处的。
+## **老詹（崔建平）** 是阿斯伯格，三个孩子都是ASD，目前三个孩子都已经上学，他提出了强制性专注训练的方法，个人认为是有很多可取之处的。
 
 ### [老詹的小红书链接](https://www.xiaohongshu.com/user/profile/6039f4b4000000000100a098)
 
@@ -21,5 +20,3 @@ cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/LaoZhan-Cover.png
 ### [清华爸爸：16个游戏，快速减少自闭症孩子多动！](https://mp.weixin.qq.com/s/_g9HpFLlvdTPxOFNpHszRQ)
 
 ### [清华爸爸给三个自闭症孩子设计的20款居家游戏，手把手动图示范！](https://mp.weixin.qq.com/s/wukyLKiCCqMokuB-ZHOYeQ)
-
-==123==
