--- a/source/_posts/ASD_Res/家务练习清单.md
+++ b/source/_posts/ASD_Res/家务练习清单.md
@@ -10,19 +10,78 @@ categories: 自闭症资源
 copyright_author: Demon 
 copyright_info: 未经允许，请勿转载
 cover: 
+
 ---
 
-| 4岁和5岁                     |
-| ------------------------- |
-| 注意：在这个年龄段，可以开始训练孩子使用家庭家务表 |
-| 只需父母少量帮助就能自己穿衣服           |
-| 只需父母少量帮助就能自己整理床铺          |
-| 把东西从车上拿到家里                |
-| 在大人监督下摆放餐桌                |
-| 在大人监督下清理餐桌                |
-| 帮父母准备食物                   |
-| 帮父母搬轻的日用品                 |
-| 在洗衣时把袜子配对                 |
-| 负责宠物的食碗和水碗                |
-| 在浴室挂好毛巾                   |
-|                           |
+# 家务练习清单
+
+| 4岁和5岁            |
+| ---------------- |
+|                  |
+| 只需父母少量帮助就能自己穿衣服  |
+| 只需父母少量帮助就能自己整理床铺 |
+| 把东西从车上拿到家里       |
+| 在大人监督下摆放餐桌       |
+| 在大人监督下清理餐桌       |
+| 帮父母准备食物          |
+| 帮父母搬轻的日用品        |
+| 在洗衣时把袜子配对        |
+| 负责宠物的食碗和水碗       |
+| 在浴室挂好毛巾          |
+
+---
+
+| 6 岁和 7 岁      |
+| ------------- |
+| 每天整理床铺        |
+| 刷牙            |
+| 梳头            |
+| 挑选当天的衣服并自己穿上  |
+| 在大人监督下写感谢信    |
+| 负责宠物的饮食、饮水和锻炼 |
+| 用吸尘器清洁自己的房间   |
+| 用湿拖把拖自己房间的地   |
+| 在大人监督下折叠衣物    |
+| 将洗碗机里的餐具归位    |
+| 在大人监督下帮忙准备食物  |
+| 倒垃圾桶          |
+
+---
+
+| 8 至 11 岁        |
+| --------------- |
+| 注意个人卫生          |
+| 保持卧室整洁          |
+| 对家庭作业负责         |
+| 保管好个人物品         |
+| 为收到的礼物写感谢信      |
+| 睡前设置好闹钟         |
+| 洗碗              |
+| 在大人监督下清洗家用汽车    |
+| 自己动手准备几道简单的菜肴   |
+| 在大人监督下打扫浴室      |
+| 清理落叶            |
+| 学习使用洗衣机和烘干机     |
+| 在大人监督下整理所有洗好的衣物 |
+| 把垃圾桶放到路边以便垃圾回收  |
+
+---
+
+| 6 至 9 岁              |
+| -------------------- |
+| 扫地                   |
+| 帮忙准备袋装或盒装午餐          |
+| 清理庭院落叶               |
+| 在大人少量监督下打扫自己的卧室      |
+| 将采购的食品杂货归位           |
+| 把餐具放进洗碗机             |
+| 将洗碗机里的餐具取出或沥干        |
+| 用吸尘器吸尘               |
+| 帮父母准备晚餐              |
+| 自己制作小吃 / 早餐          |
+| 饭后擦拭餐桌               |
+| 整理自己洗好的衣物            |
+| 带家里的狗散步（在花园里或在大人监督下） |
+| 用湿拖把拖地               |
+| 将室内垃圾桶里的垃圾倒进厨房垃圾桶    |
+
